<?xml version="1.0"?>
<package>
  <name>concert_appmanager_app</name>
  <version>0.1.0</version>
  <description>The concert_appmanager_app package</description>
  <maintainer email="dwlee@yujinrobot.com">Donguk Lee</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/robotics-in-concert/rocon_qt_gui</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_qt_gui/issues</url>

  <author>Donguk Lee</author>
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>python-rospkg</run_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/appmanager_app_plugin.xml"/>
  </export>
</package>
